save instance with csv one shot
